syntax = "proto3";

package common;

option go_package = "./";

message MyLog {
  string timeStamp = 1;
  string id = 2;
  string srcNamespaceName = 3;
  string srcPodName = 4;
  map<string, string> srcLabel = 5;
  string srcIP = 6;
  string srcPort = 7;
  string dstNamespaceName = 8;
  string dstPodName = 9;
  map<string, string> dstLabel = 10;
  string dstIP = 11;
  string dstPort = 12;
  string protocol = 13;
  string method = 14;
  string path = 15;
  int64  responseCode = 16;
}

service LogStore {
  rpc SendMyLog(MyLog) returns (LogResponse);
}

message LogResponse {
  string message = 1;
}